# PredictFinance

./: .gitattributes  .gitignore  AGENTS.md  AUDIT_ARCHITECTURE_API.md  KNOWN_ISSUES.md  LICENSE  README.md  gitlab_deploy_legacy  gitlab_deploy_legacy.b64  gitlab_deploy_legacy.pub  predictfinance_checkpoint_resume_message30.md  refonte_plan.txt
FinanceIA/: README.md  azure-pipelines.yml  logging_config.py  main.py  pyproject.toml  requirements.txt  run_evaluate_batch.py  run_tests.py
FinanceIA/API/: api.py  api_double_top.py  test-api.py
FinanceIA/fetchers/: data_fetcher.py
FinanceIA/help/: prompt-todo  service-server.txt  structure.txt  todo
FinanceIA/patterns/: bilateral_patterns.py  continuation_patterns.py  reversal_patterns.py
FinanceIA/pipeline/: pipeline_config.py  pipeline_dataset.py  pipeline_features.py  pipeline_indicators.py  pipeline_main.py  pipeline_training.py  train_pipeline.py
FinanceIA/pipeline/models/: cnn_model.h5  lightgbm_model.joblib
FinanceIA/pipeline/pipeline_double_top/: analyze_double_top.py  config_double_top.py  evaluate_model.py  models_sequential.py  (+1 more)
FinanceIA/tests/: conftest.py  test_analyze_double_top.py  test_cli_error_contract.py  test_cli_smoke.py  test_config_double_top.py  test_dataset.py  test_double_top.py  test_evaluate_model.py  test_indicators.py  test_integration_pipeline.py  test_logging.py  test_model_persistence.py  test_models_sequential.py  test_no_future_leakage.py  test_pipeline_utils.py  test_predict.py  test_runtime_api.py  test_simulate.py  test_train_artifacts.py  test_validation_guardrails.py
(+1698 files in other folders)
