[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-ia"
version = "0.1.0"
description = "Simple double top binary pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "yfinance>=0.2.50,<1",
  "scikit-learn>=1.5,<2",
  "lightgbm>=4.0,<5",
  "joblib>=1.4,<2"
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
